--- a/problem_1/problem_1.vcxproj
+++ b/problem_1/problem_1.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{2f85d124-e36e-458d-b663-ea12b12c6d9a}</ProjectGuid>
-    <RootNamespace>cppessentialsoopmodule2exam</RootNamespace>
+    <ProjectGuid>{0c42c79b-5250-4f02-8004-00e720f63fdf}</ProjectGuid>
+    <RootNamespace>problem1</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -139,7 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="cpp_essentials_oop_module_2_exam.cpp" />
+    <ClCompile Include="problem_1.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
